# DMG-Web-Designer-Assessment

./: README.md  manage.py  pyproject.toml
dmgapp/: admin.py  apps.py  models.py  urls.py
dmgproject/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: DescriptionContent.js  IntroContent.js  Toyota4Rav.css  Toyota4Rav.js  ToyotaHeader.js  TrimFeatures.js  mobile.css
